--- a/Website/index.html
+++ b/Website/index.html
@@ -148,10 +148,8 @@
         </div>
         <h5 class="m-0 mb-2">Listing URL</h5>
         <div class="row align-items-center">
-          {{~ if listingInfo.InfoLink.Url ~}}
-            <fluent-text-field aria-readonly="true" id="packageInfoVccUrlField" class="vccUrlField" readonly value="{{listingInfo.InfoLink.Url}}">
-            </fluent-text-field>
-          {{~ end; ~}}
+          <fluent-text-field aria-readonly="true" id="packageInfoVccUrlField" class="vccUrlField" readonly value="{{listingInfo.Url}}">
+          </fluent-text-field>
 
           <fluent-button class="ms-2" id="packageInfoVccUrlFieldCopy">
             <svg slot="start" width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
